# GraphGeneratorFork

./: .dockerignore  .gitignore  Dockerfile  Makefile  Readme.md  env.txt.tpl  go.mod  go.sum
.github/workflows/: docker-image.yml
cmd/generator/: main.go
pkg/api/: dot.go  errors.go  json.go  matrix.go  types.go  validate.go
pkg/configuration/: provider.go
pkg/generator/: types.go
pkg/generator/algorithms/: average.go  average_test.go  between.go  between_test.go  bst.go  bst_test.go  complete.go  complete_test.go  regular.go  regular_test.go  spanning_tree.go  utils.go  utils_test.go  weights.go  weights_test.go
pkg/generator/decision/: executor.go
pkg/generator/service/: generator_service_test.go  service.go
pkg/requests/: service.go
pkg/requests/memory/: memory_service.go
pkg/requests/persistent/: persistent_service.go  persistent_service_test.go
pkg/routers/: service.go
pkg/routers/middleware/: middlewares.go  middlewares_test.go
pkg/routers/web/: routes.go
pkg/utils/: error_handling.go
scripts/: run_devel.sh  run_tests.sh
test/: Readme.md  pyproject.toml
test/suite/: conftest.py  graph_api.py  graph_page.py
test/suite/api/: test_endpoints.py  test_graph.py  test_invalid_graph.py
ui/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
ui/src/: index.html
ui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  base.component.ts  graph-batch-list.ts  graph-batch-service.service.ts  graph-batch.ts  graph-form-group.ts  graph-request-list.ts  graph-type.ts  (+7 more)
(+25 files in other folders)
